--- a/src/main/resources/templates/add-role.html
+++ b/src/main/resources/templates/add-role.html
@@ -11,6 +11,7 @@
         <input placeholder="Enter the Role" th:field="*{role}" type="text"/>
         <input type="submit">
     </form>
+    <a th:href="@{/admin/view-role}">View Roles</a>
     <p th:if="${error}" th:text="${error}" style="color: red"/>
 </body>
 </html>
