--- a/src/main/resources/templates/register-user.html
+++ b/src/main/resources/templates/register-user.html
@@ -13,7 +13,7 @@
 <body><h1>Sign Up Now</h1>
 <p>Please fill out this to register</p>
 <table>
-    <form th:action="@{/user/registerProcessing}" th:object="${userData}" method="post">
+    <form th:action="@{/user/register-user-save}" th:object="${userData}" method="post">
         <tr>
             <div>
                 <td><label for="firstName">Full Name :</label></td>
@@ -36,8 +36,7 @@
         <tr rowspan="2">
             <td><input type="submit" value="Register"> <input type="reset" value="Reset"></td>
         </tr>
-        <p th:each="err : ${#fields.errors()}" th:text="${err}" class="error" style="color: red"><br></p>
-        <p th:if="${errors}" th:text="${errors}" style="color: red"><br></p></form>
+        <p th:if="${error}" th:text="${error}" style="color: red"/>
 </table>
 <span>Already have an account <a th:href="@{/login}">Login here</a></span></body>
 </html>
