--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,14 +1,31 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Registration | Blogging </title>
+    <title>POST </title>
+
 
 </head>
-<body>
+<body bgcolor="aqua">
+<<div>
+ <center>
+     <h1>User Registration</h1>
+ </center>
 
-<p>
-    this is hellow .html file with thymleaf
-</p>
+    <label>
+        <input type="text" style="border: 2px solid black; display: block"/>
+    </label>
+
+<center>
+    <textarea th:width="400px" th:height="300px" style="display: block;">
+
+</textarea>
+
+</center>
+
+
+</div>
+
+
 
 </body>
 
