--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -6,9 +6,10 @@
 </head>
 <body>
     <h1>Welcome </h1><h1 th:text="${name}"></h1>
-    <div style="height: 100px;width: 100px;border: 1px solid black">
+    <div style="height: 300px;width: 300px;border: 1px solid black">
         <a th:href="@{/admin/view-role}">View Roles</a> <br>
-        <a th:href="@{/admin/user/view-users}">View Users</a>
+        <a th:href="@{/admin/user/view-users}">View Users</a> <br>
+        <a th:href="@{/admin/view-categories}">View Categories</a> <br>
         <a th:href="@{/logout}">Log Out</a>
     </div>
 </body>
