Role Based Authentication Done

--- a/src/main/resources/templates/add-category.html
+++ b/src/main/resources/templates/add-category.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Category</title>
+    <title>Add Category | Blogging</title>
 </head>
 <body>
 <form th:object="${categoryData}" method="post" th:action="@{/admin/add-category-save}">
