--- a/src/main/resources/templates/view-subcategories.html
+++ b/src/main/resources/templates/view-subcategories.html
@@ -26,6 +26,6 @@
     </tr>
 </table>
 
-<a th:href="@{/admin/home}">Back</a>-->
+<a th:href="@{/admin/view-categories}">Back</a>-->
 </body>
 </html>
