--- a/src/main/resources/templates/view-categories.html
+++ b/src/main/resources/templates/view-categories.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add Categories | Blogging</title>
+    <title>View Categories | Blogging</title>
     <style>
         table,tr,td{
             border: 1px solid black;
