now post content can be added with large size of characters(clob with mediumText).

--- a/src/main/resources/templates/post-editor.html
+++ b/src/main/resources/templates/post-editor.html
@@ -28,7 +28,7 @@
                 style="display: block; width:97%; height: 500px;
                       box-shadow: 2px 2px 4px grey; margin: 10px;
                       margin-end: 40px; font-size: 20px" placeholder="enter the post content here"
-        >
+        required>
 
 
         </textarea>
@@ -40,6 +40,7 @@
 
 
     </form>
+<a  onclick="history.back()">Back</a>
 </div>
 </body>
 
