--- a/src/main/resources/templates/view-user.html
+++ b/src/main/resources/templates/view-user.html
@@ -20,7 +20,7 @@
     </tr>
 
     <tr th:each="role:${user.roles}">
-        <td  th:text="${role.role}"></td>
+        <td  th:text="${role.name}"></td>
         <td>
             <a th:href="@{/admin/user/delete-user-role(id=${user.id})}">delete</a>
         </td>
