Post partially done.

--- a/src/main/resources/templates/view-post.html
+++ b/src/main/resources/templates/view-post.html
@@ -3,19 +3,17 @@
     <title th:text="${postid.title}"></title>
 </head>
 
-<div id="POstTitleAndCategoryAndWishlist">
+<div>
     <h1 th:text="${postid.title}"></h1>
-
 </div>
 <hr/>
 
 
 <div>
-    <p th:text="${postid.content}">
-
-    </p>
-
-
+    <p th:text="${postid.content}"></p>
 </div>
+
+
+<a th:href="@{/admin/all-post}">Back-></a>
 
 </html>
