mapped super class added

--- a/src/main/resources/templates/add-category.html
+++ b/src/main/resources/templates/add-category.html
@@ -10,7 +10,7 @@
     <input type="submit">
 </form>
 <a th:href="@{/admin/view-categories}">View Categories</a>
-<p th:if="${error}" th:text="${error}" style="color: red"/>
+<p th:if="${error}" th:text="${error}" style="color: red"></p>
 
 </body>
 </html>
