--- a/src/main/resources/templates/view-post.html
+++ b/src/main/resources/templates/view-post.html
@@ -13,7 +13,10 @@
     <p th:text="${postid.content}"></p>
 </div>
 
+<h3>Comments...</h3>
+<div th:each="">
 
+</div>
 <a th:href="@{/admin/all-post}">Back-></a>
 
 </html>
