Post partially done.

--- a/src/main/resources/templates/user-dashboard.html
+++ b/src/main/resources/templates/user-dashboard.html
@@ -5,6 +5,12 @@
     <title>Welcome User</title>
 </head>
 <body>
-
+<h1>Welcome </h1>
+<h1 th:text="${name}"></h1>
+<div style="height: 300px;width: 300px;border: 1px solid black">
+    <a th:href="@{/user/add-post}">Add Post</a><br>
+    <a th:href="@{/user/all-post}">View Posts</a><br>
+    <a th:href="@{/logout}">Log Out</a>
+</div>
 </body>
 </html>
