--- a/src/main/resources/templates/admin-view-all-post.html
+++ b/src/main/resources/templates/admin-view-all-post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome User</title>
+    <title>View Post Admin</title>
 </head>
 <body>
 <div>
