added Bookmark entity

--- a/src/main/resources/templates/post-editor.html
+++ b/src/main/resources/templates/post-editor.html
@@ -19,7 +19,7 @@
                         display: block; width:97%; height: 60px;
                         box-shadow: 2px 2px 4px grey; margin: 10px;
                         margin-end: 40px"  placeholder="enter the title for the post"
-
+required
               th:field="*{title}"
         />
 
@@ -37,8 +37,6 @@
 
         <p><input type="submit" value="Submit"  />
         <input type="reset" value="Clear" /></p>
-
-
     </form>
 <a  onclick="history.back()">Back</a>
 </div>
