added Bookmark entity partially done

--- a/src/main/resources/templates/user-dashboard.html
+++ b/src/main/resources/templates/user-dashboard.html
@@ -10,6 +10,8 @@
 <div style="height: 300px;width: 300px;border: 1px solid black">
     <a th:href="@{/user/add-post}">Add Post</a><br>
     <a th:href="@{/user/all-post}">View Posts</a><br>
+    <a th:href="@{/user/my-post}">View MyPosts</a><br>
+
     <a th:href="@{/logout}">Log Out</a>
 </div>
 </body>
