--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -11,6 +11,7 @@
         <a th:href="@{/admin/user/view-users}">View Users</a> <br>
         <a th:href="@{/admin/view-categories}">View Categories</a> <br>
         <a th:href="@{/user/add-post}">Add Post</a><br>
+        <a th:href="@{/user/my-post}">View MyPosts</a><br>
         <a th:href="@{/admin/all-post}">View Post</a><br>
         <a th:href="@{/logout}">Log Out</a>
     </div>
