--- a/src/main/resources/templates/admin-view-all-post.html
+++ b/src/main/resources/templates/admin-view-all-post.html
@@ -13,8 +13,9 @@
            </p>
             <a th:text="${postData.isVerified} ? 'Un-Verify Post' : 'Verify Post'" th:href="@{/admin/post/verification(postId=${postData.id},isVerified=${postData.isVerified})}"></a> <br>
             <a  th:href="@{/admin/delete-post(id=${postData.id})}">Delete Post</a>
-            <br><br><br><br>
-            Posted By : <b th:text="${postData.userDto.name}"></b>
+            <br><br>
+            Posted By : <b th:text="${postData.userDto.name}"></b> <br>
+            Category : <b th:text="${postData.categoryDto.name}"></b>
         </div>
     </div>
     <a th:href="@{/admin/home}">Back-></a>
