--- a/src/main/resources/templates/add-post.html
+++ b/src/main/resources/templates/add-post.html
@@ -38,7 +38,7 @@ required
         <p><input type="submit" value="Submit"  />
         <input type="reset" value="Clear" /></p>
     </form>
-<a  onclick="history.back()">Back</a>
+<a  onclick="history.back()">Back-></a>
 </div>
 </body>
 
