--- a/src/main/resources/templates/user-view-all-post.html
+++ b/src/main/resources/templates/user-view-all-post.html
@@ -14,11 +14,9 @@
     Posted By : <b th:text="${postData.userDto.name}"></b>
   </div>
 </div>
-<div sec:authorize="hasRole('ADMIN')">
-    <a th:href="@{/user/home}">Back-></a>
-</div>
 
-<div sec:authorize="hasRole('USER')">
+
+<div>
     <a th:href="@{/user/home}">Back-></a>
 </div>
 </body>
