added Bookmark Support with POst.

--- a/src/main/resources/templates/user-dashboard.html
+++ b/src/main/resources/templates/user-dashboard.html
@@ -12,6 +12,8 @@
     <a th:href="@{/user/all-post}">View Posts</a><br>
     <a th:href="@{/user/my-post}">View MyPosts</a><br>
 
+    <a th:href="@{/user/all-bookmarked-post}">My BookmarkedPost</a> <br>
+
     <a th:href="@{/logout}">Log Out</a>
 </div>
 </body>
