--- a/src/main/resources/templates/view-post.html
+++ b/src/main/resources/templates/view-post.html
@@ -6,6 +6,18 @@
 <div>
     <h1 th:text="${postid.title}"></h1>
 </div>
+<p>
+    <a th:text="${isBookMarked}?'remove Bookmarked':'Add Bookmark'"
+   th:href="@{/user/post/change-bookmark-status(postId=${postid.id},isBookMarked=${isBookMarked}
+   )}"
+    ></a>
+<!--
+th:href="@{/admin/post/verification(postId=${postData.id},isVerified=${postData.isVerified})}"
+
+></a> <br>-->
+<!--    th:href="@{/user/post/change-bookmark-status(postId=${postData.id},-->
+<!--    isBookMarked=${isBookMarked}, postDto=${postid})}"-->
+</p>
 <hr/>
 
 
