Partial Commit of Day

--- a/src/main/resources/templates/view-role.html
+++ b/src/main/resources/templates/view-role.html
@@ -25,7 +25,7 @@
             <td><a th:href="@{/admin/delete-role(role=${role.id})}"/>delete</td>
         </tr>
     </table>
-
+role
     <a th:href="@{/admin/home}">Back</a>-->
 
 </body>
