--- a/src/main/resources/templates/view-user.html
+++ b/src/main/resources/templates/view-user.html
@@ -22,7 +22,7 @@
     <tr th:each="role:${user.roles}">
         <td  th:text="${role.name}"></td>
         <td>
-            <a th:text="${role.name == 'ADMIN'} ? 'Change To USER' : 'Change To ADMIN'" th:href="@{/admin/user/update-role(id=${role.id},role=${role.name})}"></a>
+            <a th:text="${role.name == 'ADMIN'} ? 'Change To USER' : 'Change To ADMIN'" th:href="@{/admin/user/update-role(id=${param.id},role=${role.name})}"></a>
         </td>
     </tr>
 
