added Pagination Fully Done.

--- a/src/main/resources/templates/add-post.html
+++ b/src/main/resources/templates/add-post.html
@@ -19,7 +19,9 @@
                         box-shadow: 2px 2px 4px grey; margin: 10px;
                         margin-end: 40px" placeholder="enter the title for the post"
                required
-               th:field="*{title}"/>
+               th:field="*{title}"
+        value="aaaaaaaaaaaaaaaaaaaaaaaaaaaygyug"
+        />
         <label for="category">category</label>
         <select id="category" name="Category" th:field="*{categoryDto.name}">
         <option th:each="category: ${categories}" th:value="${category.name}" th:text="${category.name}"></option>
@@ -32,7 +34,7 @@
               box-shadow: 2px 2px 4px grey; margin: 10px;
               margin-end: 40px; font-size: 20px" placeholder="enter the post content here"
         required>
-
+yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaauguayfafytfytafytafayfa
 
 </textarea>
         </label>
