--- a/src/main/resources/templates/admin-view-all-my-post.html
+++ b/src/main/resources/templates/admin-view-all-my-post.html
@@ -12,8 +12,9 @@
         <a th:href="@{/admin/post/{postId}(postId=${postData.id})}"> <span th:text="${postData.title}"></span></a>
       </p>
       <a  th:href="@{/admin/delete-mypost(id=${postData.id})}">Delete Post</a>
-      <br><br><br><br>
-      Posted By : <b th:text="${postData.userDto.name}"></b>
+      <br><br>
+      Posted By : <b th:text="${postData.userDto.name}"></b> <br>
+      Category : <b th:text="${postData.categoryDto.name}"></b>
     </div>
   </div>
   <a th:href="@{/admin/home}">Back-></a>
