--- a/src/main/resources/templates/view-post-admin.html
+++ b/src/main/resources/templates/view-post-admin.html
@@ -23,7 +23,7 @@
       th:action="@{/user/save-comment(postId=${postDto.id},userEmail=${userEmail})}">
     Add Comment : <label>
     <textarea rows="20" cols="30" style="width: 400px; height: 110px;" th:field="*{content}"></textarea>
-    <input type="submit">
+    <input type="submit" value="submit">
 </label>
 </form>
 <div>
