--- a/src/main/resources/templates/admin-view-all-my-post.html
+++ b/src/main/resources/templates/admin-view-all-my-post.html
@@ -12,6 +12,7 @@
         <a th:href="@{/user/post/{postId}(postId=${postData.id})}"> <span th:text="${postData.title}"></span></a>
       </p>
       <a  th:href="@{/admin/delete-mypost(id=${postData.id})}">Delete Post</a>
+      <a  th:href="@{/admin/update-mypost(id=${postData.id})}">Update Post</a>
       <br><br><br><br>
       Posted By : <b th:text="${postData.userDto.name}"></b>
     </div>
