--- a/src/main/resources/templates/user-view-all-post.html
+++ b/src/main/resources/templates/user-view-all-post.html
@@ -10,7 +10,6 @@
         <p style="text-indent: 3em">
             <a th:href="@{/user/post/{postId}(postId=${postData.id})}"> <span th:text="${postData.title}"></span></a>
         </p>
-        <br><br>
         Posted By : <b th:text="${postData.userDto.name}"></b> <br>
         Category : <b th:text="${postData.categoryDto.name}"></b>
     </div>
@@ -19,21 +18,13 @@
 
 Page Number: [[${currentPage}]]
 <br>
-<a th:if="${currentPage > 1}" th:href="@{'/user/post-all?pageNo=' + ${currentPage - 1}}">Previous</a>
+<a th:if="${currentPage > 1}" th:href="@{'/user/all-post?pageNo=' + ${currentPage - 1}}">Previous</a>
 
-<a th:if="${currentPage < totalPages}" th:href="@{'/user/post-all?pageNo=' + ${currentPage + 1}}">Next</a>
+<a th:if="${currentPage < totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
 <span th:unless="${currentPage < totalPages}">Next</span>
 
-
-
-<div>
-    <a th:href="@{/user/home}">Back-></a>
-
-    <div>
-        <a href="#" th:text="Previous"></a>
-        <a href="#" th:text="Next"></a>
-
-    </div>
+<br>
+<a th:href="@{/user/home}">Back-></a>
 
 </body>
 </html>
