--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -12,7 +12,7 @@
         <a th:href="@{/admin/view-categories}">View Categories</a> <br>
         <a th:href="@{/user/add-post}">Add Post</a><br>
         <a th:href="@{/admin/my-post}">View MyPosts</a><br>
-        <a th:href="@{/admin/all-post}">View Post</a><br>
+        <a th:href="@{/admin/all-post(pageNo=1)}">View Post</a><br>
         <a th:href="@{/admin/all-bookmarked-post}">My BookmarkedPost</a><br>
 
         <a th:href="@{/logout}">Log Out</a>
