--- a/src/main/resources/templates/admin-view-all-post.html
+++ b/src/main/resources/templates/admin-view-all-post.html
@@ -17,7 +17,16 @@
             Category : <b th:text="${postData.categoryDto.name}"></b>
         </div>
     </div>
+    Page Number: [[${currentPage}]]
+    <br>
+    <a th:if="${currentPage > 1}" th:href="@{'/user/all-post?pageNo=' + ${currentPage - 1}}">Previous</a>
+
+    <a th:if="${currentPage < totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
+    <span th:unless="${currentPage < totalPages}">Next</span>
+
+    <br>
     <a th:href="@{/admin/home}">Back-></a>
+
 </div>
 </body>
 </html>
