--- a/src/main/resources/templates/view-post-admin.html
+++ b/src/main/resources/templates/view-post-admin.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>View Post Admin</title>
+    <script>
+        function submitFuc(){
+            document.getElementById("comment-form").submit();
+        }
+    </script>
 </head>
 <div>
     <h1 th:text="${postDto.title}"></h1>
@@ -11,7 +16,7 @@
 
 <p>
     <a th:text="${isBookMarked}?'remove Bookmarked':'Add Bookmark'"
-       th:href="@{/user/post/change-bookmark-status(postId=${postid.id},isBookMarked=${isBookMarked}
+       th:href="@{/admin/post/change-bookmark-status(postId=${postid.id},isBookMarked=${isBookMarked}
    )}"
     ></a>
 </p>
@@ -23,7 +28,7 @@
       th:action="@{/user/save-comment(postId=${postDto.id},userEmail=${userEmail})}">
     Add Comment : <label>
     <textarea rows="20" cols="30" style="width: 400px; height: 110px;" th:field="*{content}"></textarea>
-    <input type="submit" value="submit">
+    <button value="submit" onclick="submitFuc()">Submit</button>
 </label>
 </form>
 <div>
@@ -37,5 +42,5 @@
         <hr/>
     </div>
 </div>
-<a th:href="@{/admin/all-post}">Back-></a>
+<a onclick="history.back()">Back-></a>
 </html>
