--- a/src/main/resources/templates/admin-view-all-my-post.html
+++ b/src/main/resources/templates/admin-view-all-my-post.html
@@ -11,7 +11,8 @@
       <p style="text-indent: 3em">
         <a th:href="@{/admin/post/{postId}(postId=${postData.id})}"> <span th:text="${postData.title}"></span></a>
       </p>
-      <a  th:href="@{/admin/delete-mypost(id=${postData.id})}">Delete Post</a>
+      <a  th:href="@{/admin/delete-mypost(id=${postData.id})}">Delete Post</a> <br>
+      <a  th:href="@{/admin/update-mypost(id=${postData.id})}">Update Post</a>
       <br><br>
       Posted By : <b th:text="${postData.userDto.name}"></b> <br>
       Category : <b th:text="${postData.categoryDto.name}"></b>
