--- a/src/main/resources/templates/user-view-all-my-post.html
+++ b/src/main/resources/templates/user-view-all-my-post.html
@@ -10,7 +10,7 @@
     <p style="text-indent: 3em">
       <a th:href="@{/user/post/{postId}(postId=${postData.id})}"> <span th:text="${postData.title}"></span></a>
     </p>
-      <a  th:href="@{/user/delete-mypost(id=${postData.id})}">Delete Post</a>
+      <a  th:href="@{/user/delete-mypost(id=${postData.id})}">Delete Post</a> <br>
     <a  th:href="@{/user/update-mypost(id=${postData.id})}">Update Post</a>
     <br><br>
     Posted By : <b th:text="${postData.userDto.name}"></b> <br>
