--- a/src/main/resources/templates/user-view-all-post.html
+++ b/src/main/resources/templates/user-view-all-post.html
@@ -15,14 +15,13 @@
     </div>
 </div>
 
-
-Page Number: [[${currentPage}]]
-<br>
-<a th:if="${currentPage > 1}" th:href="@{'/user/all-post?pageNo=' + ${currentPage - 1}}">Previous</a>
-
-<a th:if="${currentPage < totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
-<span th:unless="${currentPage < totalPages}">Next</span>
-
+<div th:if="${currentPage}">
+    Page Number: [[${currentPage}]]
+    <br>
+    <a th:if="${currentPage > 1}" th:href="@{'/user/all-post?pageNo=' + ${currentPage - 1}}">Previous</a>
+    <a th:if="${currentPage < totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
+    <span th:unless="${currentPage < totalPages}">Next</span>
+</div>
 <br>
 <a th:href="@{/user/home}">Back-></a>
 
