Project Done final !!

--- a/src/main/resources/templates/admin-edit-mypost.html
+++ b/src/main/resources/templates/admin-edit-mypost.html
@@ -19,7 +19,7 @@
            style="border: 2px solid black;
                         display: block; width:97%; height: 60px;
                         box-shadow: 2px 2px 4px grey; margin: 10px;
-                        margin-end: 40px" th:text=" ${postdto.title}"
+                        margin-end: 40px" th:placeholder="${postdto.title}"
            required
            th:field="*{title}"/>
     <label for="category">category</label>
