Project Done final !!

--- a/src/main/resources/templates/view-post-user.html
+++ b/src/main/resources/templates/view-post-user.html
@@ -17,7 +17,7 @@
 <hr>
 <p>
     <a th:text="${isBookMarked}?'remove Bookmarked':'Add Bookmark'"
-       th:href="@{/user/post/change-bookmark-status(postId=${postid.id},isBookMarked=${isBookMarked}
+       th:href="@{/user/post/change-bookmark-status(postId=${postDto.id},isBookMarked=${isBookMarked}
    )}"
     ></a>
 </p>
