--- a/src/main/resources/templates/user-view-all-post.html
+++ b/src/main/resources/templates/user-view-all-post.html
@@ -19,8 +19,10 @@
     Page Number: [[${currentPage}]]
     <br>
     <a th:if="${currentPage > 1}" th:href="@{'/user/all-post?pageNo=' + ${currentPage - 1}}">Previous</a>
-    <a th:if="${currentPage < totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
-    <span th:unless="${currentPage < totalPages}">Next</span>
+    <a th:if="${currentPage <= totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
+<!--    <span th:unless="${currentPage > totalPages}">Next</span>-->
+
+    <!--1>3-->
 </div>
 <br>
 <a th:href="@{/user/home}">Back-></a>
