--- a/src/main/resources/templates/user-view-all-post.html
+++ b/src/main/resources/templates/user-view-all-post.html
@@ -19,7 +19,7 @@
     Page Number: [[${currentPage}]]
     <br>
     <a th:if="${currentPage > 1}" th:href="@{'/user/all-post?pageNo=' + ${currentPage - 1}}">Previous</a>
-    <a th:if="${currentPage <= totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
+    <a th:if="${currentPage < totalPages}" th:href="@{'/user/all-post?pageNo=' + ${currentPage + 1}}">Next</a>
 <!--    <span th:unless="${currentPage > totalPages}">Next</span>-->
 
     <!--1>3-->
